<resources>
    <string name="app_name">Premier Inn</string>
    <string name="landing_screen_version_name">Version %1$s (%2$d)</string>
    <string name="search_bar_hint_text">Destination, hotel or postcode</string>
    <string name="landing_todays_arrival_one_night">Tonight (1 night)</string>
    <string name="landing_todays_arrival_multiple_nights">Tonight - %s</string>
    <string name="landing_screen_date_text">%1$s - %2$s</string>
    <string name="landing_screen_location_subtext">Where to?</string>
    <string name="landing_screen_date_subtext">Date</string>
    <string name="landing_screen_room_subtext">Guests / Rooms</string>
    <string name="dialog_business_booker_recent_search_error_title">Unable to search</string>
    <string name="dialog_business_booker_recent_search_error_messagee">When using Premier Inn Business in the app, you are only able to request 1 room per booking. Please manually select your booking criteria.</string>
    <string name="landing_search_text">Search</string>
    <string name="amend_button_text_availability">Availability</string>
    <string name="button_text_continue">Continue</string>
    <string name="button_text_update">Update</string>
    <string name="current_location">Current location</string>
    <string name="button_continue_create_account">Continue &amp; create account</string>
    <string name="button_text_try_again">Try again</string>
    <string name="search_activity_recent_searches">Recent searches</string>
    <string name="search_activity_clear">Clear</string>
    <string name="search_activity_places">Places</string>
    <string name="search_activity_hotel">Hotels</string>
    <string name="search_activity_suggestions">Top destinations</string>
    <string name="search_activity_no_results_descriptive_message">Please try a different search term</string>
    <string name="search_activity_end_of_results">End of results</string>
    <string name="srp_first_time_offer_banner_title">First-time offer - 10% off</string>
    <string name="srp_first_time_offer_banner_subtitle">Book by %1$s, standard rates only. Select a hotel to see your savings. %2$s apply.</string>
    <string name="srp_first_time_offer_banner_terms_and_conditions"><u><b>Terms and conditions</b></u></string>
    <string name="first_time_offer_terms_and_conditions">T&amp;Cs</string>
    <string name="criteria_toolbar_text">Guests &amp; rooms</string>
    <string name="arrival_date">Arrival date</string>
    <string name="criteria_checkout_date_label">Check out:</string>
    <string name="call_us">Call us</string>
    <string name="call_hotel">Call hotel</string>
    <string name="max_rooms_title">Unable to add more rooms</string>
    <string name="max_rooms_message_up_to_9_rooms">For a group booking of %d to 9 rooms, call us on %s.</string>
    <string name="max_rooms_message_over_9_rooms">To book 10 rooms or more, please visit our website to complete a group booking form and we’ll be in touch.</string>
    <string name="max_rooms_group_booking_form_link">https://www.premierinn.com/gb/en/why/groups/form.html</string>
    <string name="criteria_max_number_of_nights_message">Maximum number of nights is 9.</string>
    <string name="criteria_max_number_nights">Maximum number of nights is %d. For more booking options please give us a call.</string>
    <string name="criteria_max_number_children">Maximum number of children per room is %d</string>
    <string name="criteria_max_number_adult">Maximum number of adults per room is %d</string>
    <string name="criteria_screen_max_infants">Need more than 1 cot? Some hotels can only fit 1 cot per room. Please call our reservations team to check and complete your booking.</string>
    <string name="criteria_accessible_cot_title">Do you need a cot provided?</string>
    <string name="criteria_accessible_cot_message">If so, please call our reservations team to complete your booking. (%s).</string>
    <string name="criteria_no_cot_available">Do you need a cot provided? If so, please call our reservations team to complete your booking.  Calls charged at the national rate.</string>
    <string name="criteria_room_type_double">Double</string>
    <string name="criteria_room_type_single">Single</string>
    <string name="criteria_room_type_family">Family</string>
    <string name="criteria_room_type_twin">Twin</string>
    <string name="criteria_room_type_accessible">Accessible</string>
    <string name="criteria_room_type_unknown">Unknown</string>
    <string name="criteria_include_cot">Include a cot</string>
    <string name="criteria_add_cot">Add cot</string>
    <string name="criteria_adult_rules">Max 2 per room</string>
    <string name="criteria_children_rules">Max 2 per room</string>
    <string name="criteria_room_type">Room type</string>
    <string name="criteria_remove_room">Remove</string>
    <string name="extra_cot_title">Do you need an extra cot?</string>
    <string name="extra_cot_message">Some rooms can only fit 1 cot per room. To request another cot please call our reservations team (%s).</string>
    <plurals name="criteria_tooltip_message">
        <item quantity="one">%d night is your maximum allowed stay from this arrival date</item>
        <item quantity="other">%d nights is your maximum allowed stay from this arrival date</item>
    </plurals>
    <string name="room_number">Room %d</string>
    <string name="adults">Adults</string>
    <string name="children">Children</string>
    <string name="infants">Infants</string>
    <plurals name="number_of_nights">
        <item quantity="one">%1$d night</item>
        <item quantity="other">%1$d nights</item>
    </plurals>
    <plurals name="number_of_adults">
        <item quantity="one">%1$d adult</item>
        <item quantity="other">%1$d adults</item>
    </plurals>
    <plurals name="number_of_children">
        <item quantity="one">%1$d child</item>
        <item quantity="other">%1$d children</item>
    </plurals>
    <plurals name="number_of_infants">
        <item quantity="one">%1$d infant</item>
        <item quantity="other">%1$d infants</item>
    </plurals>
    <string name="criteria_add_room">+ Add a room</string>
    <string name="criteria_search_for_hotels">Search for Hotels</string>
    <string name="criteria_max_number_of_rooms_message">Maximum number of rooms per booking is 4.</string>
    <string name="inn_business_info_box_title">To book multiple rooms using Premier Inn Business, please visit our website.</string>
    <string name="call_view_default_customer_service_number">03330038101</string>
    <string name="call_view_group_bookings_number">03330038104</string>
    <string name="call_view_cost">Calls are charged from 13p a minute</string>
    <string name="call_view_no_cost">Calls are charged at the national rate</string>
    <string name="call_view_call_us_prompt">For more booking options please give us a call.</string>
    <string name="search_results_toolbar">%1$s - %2$s • %3$s, %4$s</string>
    <string name="search_results_toggle_button_left">Distance</string>
    <string name="search_results_toggle_button_right">Price</string>
    <string name="search_results_map_view">Map view</string>
    <string name="search_results_list_view">List view</string>
    <string name="search_results_no_hotel_available">We have no hotels available in this area for your specified dates. Try changing your dates or destination</string>
    <string name="search_results_error">Something went wrong. Please try again.</string>
    <string name="bathroom_selection_title">Choose your bathroom</string>
    <string name="bathroom_selection_hotel_no_wetrooms">This hotel does not have wet rooms, so we\'ve given you a lowered bath room</string>
    <string name="bathroom_selection_hotel_no_lowered_baths">This hotel does not have lowered bath rooms, so we\'ve given you a wet room</string>
    <string name="bathroom_wet_rooms_label">wet room</string>
    <string name="bathroom_lowered_bath_rooms_label">lowered bathroom</string>
    <string name="bathroom_size_double">double</string>
    <string name="bathroom_size_twin">twin</string>
    <string name="bathroom_selection_no_more_available">Sorry there are no more %1$s %2$ss available at this hotel, so we\'ve given you a %3$s %4$s</string>
    <string name="bathroom_selection_lowered_bath_title">Lowered bathroom</string>
    <string name="bathroom_selection_wet_room_title">Wet bathroom</string>
    <string name="bathroom_selection_lowered_bath_description">Bathroom with a lowered bath set at standard wheelchair height (480mm), lever taps, wider doors and bath mats available on request.</string>
    <string name="bathroom_selection_wetroom_description">Level access shower room with high-powered shower, conveniently placed shower controls, folding seat and wider doors.</string>
    <string name="room_dialog_activity_double">Double</string>
    <string name="room_dialog_activity_double_description">One double super comfy bed. Up to 2 adults per room.</string>
    <string name="room_dialog_activity_single">Single</string>
    <string name="room_dialog_activity_single_description">One single super comfy bed. 1 adult per room.</string>
    <string name="room_dialog_activity_twin">Twin</string>
    <string name="room_dialog_activity_twin_description">One double super comfy bed, plus sofa bed. Up to 2 adults per room.</string>
    <string name="room_dialog_activity_family">Family</string>
    <string name="room_dialog_activity_family_description">One super comfy double bed, sofa bed and pull out bed. Up to 2 adults and 2 children per room. Cot available on request.</string>
    <string name="room_dialog_activity_accessible">Accessible</string>
    <string name="room_dialog_activity_accessible_description">One accessible (480mm high) double super comfy bed. Lowered bath or wet room, depending on facilities available at hotel. Up to 2 adults.</string>
    <string name="guest_details_form_first_name">First name</string>
    <string name="guest_details_form_last_name">Last name</string>
    <string name="guest_details_form_contact_number">Contact number</string>
    <string name="guest_details_address_section_title">Your address</string>
    <string name="guest_details_address_toggle_button_home">Home</string>
    <string name="guest_details_address_toggle_button_work">Work</string>
    <string name="guest_details_form_passport_number">Passport number</string>
    <string name="guest_details_form_next_destination">Next destination</string>
    <string name="postcode_finder_search_hint">Postcode</string>
    <string name="postcode_finder_find_address_label">Find address</string>
    <string name="personal_details_nationality_label">Nationality</string>
    <string name="address_form_postcode">Postcode</string>
    <string name="address_form_address_line1">Address line 1</string>
    <string name="address_form_address_line2">Address line 2</string>
    <string name="address_form_address_line3">Address line 3</string>
    <string name="address_form_hint_city">Town/City</string>
    <string name="address_form_company">Company name</string>
    <string name="address_form_enter_address_manual">Enter address manually</string>
    <string name="email_address">Email address</string>
    <string name="form_field_label_country">Country</string>
    <string name="accessible_double_name">Accessible double</string>
    <string name="accessible_double_description">One double super comfy bed. \nUp to 2 adults per room.</string>
    <string name="accessible_twin_name">Accessible twin</string>
    <string name="accessible_twin_description">One double super comfy bed, plus sofa bed. Up to 2 adults per room.</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
</resources>