<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/legendLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/generic_padding_8"
    android:paddingBottom="@dimen/generic_padding_8"
    android:gravity="center"
    android:background="@color/teal_dark"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/legendText1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/BodySmall"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/monday"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/legendText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/BodySmall"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tuesday"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/legendText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/BodySmall"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/wednesday"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/legendText4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/BodySmall"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/thursday"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/legendText5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/BodySmall"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/friday"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/legendText6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/BodySmall"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/saturday"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/legendText7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/BodySmall"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/sunday"
        android:textColor="@color/white" />

</LinearLayout>