<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/titles_spinner"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

    <com.whitbread.premierinn.common.view.FormEditTextView
        android:id="@+id/first_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/generic_margin_8"
        android:hint="@string/guest_details_form_first_name"
        android:autofillHints="personGivenName"
        android:imeOptions="actionNext"
        android:visibility="gone"
        android:inputType="textCapWords|textNoSuggestions"/>

    <com.whitbread.premierinn.common.view.FormEditTextView
        android:id="@+id/last_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/generic_margin_8"
        android:hint="@string/guest_details_form_last_name"
        android:autofillHints="personFamilyName"
        android:imeOptions="actionNext"
        android:visibility="gone"
        android:inputType="textCapWords|textNoSuggestions"/>

    <com.whitbread.premierinn.common.view.FormEditTextView
        android:id="@+id/contact_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/generic_margin_8"
        android:hint="@string/guest_details_form_contact_number"
        android:autofillHints="phoneNumberDevice|phoneNumber|phoneNational"
        android:imeOptions="actionNext"
        android:visibility="gone"
        android:inputType="number|text"/>

    <com.whitbread.premierinn.common.view.FormEditTextView
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/generic_margin_8"
        android:hint="@string/email_address"
        android:autofillHints="emailAddress"
        android:imeOptions="actionNext"
        android:visibility="gone"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/nationality_spinner_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SubtextSmall"
        android:text="@string/personal_details_nationality_label"
        android:textColor="@color/grey_medium"
        android:visibility="gone"
        android:layout_marginStart="@dimen/generic_margin_4"
        android:layout_marginTop="@dimen/generic_margin_8"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/nationality_spinner"
        style="@style/CountySpinnerStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <com.whitbread.premierinn.common.view.FormEditTextView
        android:id="@+id/passport_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/generic_margin_8"
        android:hint="@string/guest_details_form_passport_number"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:visibility="gone"/>

    <com.whitbread.premierinn.common.view.FormEditTextView
        android:id="@+id/next_destination_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/generic_margin_8"
        android:hint="@string/guest_details_form_next_destination"
        android:imeOptions="actionNext"
        android:visibility="gone"
        android:inputType="textCapWords"/>

</LinearLayout>